court table + add court to case and handle the form to add case and court

--- a/frontend/src/app/components/cases/cases.component.html
+++ b/frontend/src/app/components/cases/cases.component.html
@@ -54,7 +54,10 @@
         [clientEmail]="case.client?.email"
         [clientAddress]="case.client?.address"
       ></td>
-      <td></td>
+      <td>
+        Court Name : {{ case.court?.name }} <br />
+        Court Location: {{ case.court?.location }}
+      </td>
       <td>
         <div class="custom-select">
           <select
