--- a/frontend/src/app/shared/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/sidebar/sidebar.component.html
@@ -67,6 +67,7 @@
       @if (casesDropDown) {
       <app-dropdown passedRoute="cases" listName="Cases List" />
       <app-dropdown passedRoute="case-categories" listName="Case Categories" />
+      <app-dropdown passedRoute="case-grades" listName="Case Grades" />
       }
       <li (click)="closeAllDropdowns()">
         <a class="nav-link" routerLink="courts" routerLinkActive="activated">
