adding authentication routing group

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,5 +8,5 @@
 </div>
 
 <ng-template #loginForm>
-  <app-login-from></app-login-from>
+  <router-outlet name="authentication"></router-outlet>
 </ng-template>
