--- a/frontend/src/app/components/clients/clients.component.html
+++ b/frontend/src/app/components/clients/clients.component.html
@@ -1,25 +1,12 @@
 <div class="">
-  <app-secondary-nav
-    tableTitle="Client List"
-    addNewButton="New Client"
-    (btnClicked)="toggleFormVisibility()"
-  />
+  <app-secondary-nav tableTitle="Client List" addNewButton="New Client" (btnClicked)="toggleFormVisibility()"
+    (search)="handleSearch($event)" />
 
-  <app-adding-form
-    *ngIf="isFormVisible"
-    [formType]="formType"
-    [formHeader]="formHeader"
-    [formInputRows]="newClientInputRows"
-    [onFormSubmit]="submitForm"
-    (backdropClicked)="toggleFormVisibility()"
-    (inputChanged)="checkChangedInput($event)"
-  ></app-adding-form>
+  <app-adding-form *ngIf="isFormVisible" [formType]="formType" [formHeader]="formHeader"
+    [formInputRows]="newClientInputRows" [onFormSubmit]="submitForm" (backdropClicked)="toggleFormVisibility()"
+    (inputChanged)="checkChangedInput($event)"></app-adding-form>
 
-  <app-table
-    firstColumnHeader="Client"
-    secondColumnHeader="Contact"
-    thirdColumnHeader="Address"
-  >
+  <app-table firstColumnHeader="Client" secondColumnHeader="Contact" thirdColumnHeader="Address">
     <th scope="col" ngProjectAs="fourthColumnHeader">Action</th>
     @for (client of clients; track $index) {
     <tr>
@@ -36,20 +23,13 @@
       <td>{{ client.address }}</td>
       <td>
         <div class="custom-select">
-          <select
-            (change)="onActionSelect($event, client.id!)"
-            name="SELECT"
-            id=""
-          >
+          <select (change)="onActionSelect($event, client.id!)" name="SELECT" id="">
             <option value="">SELECT</option>
             <option value="View">View</option>
             <option value="Update">Update</option>
             <option value="Delete">Delete</option>
           </select>
-          <i
-            class="fa-solid fa-arrow-down"
-            style="color: var(--mainTextColor)"
-          ></i>
+          <i class="fa-solid fa-arrow-down" style="color: var(--mainTextColor)"></i>
         </div>
       </td>
     </tr>
