--- a/frontend/src/app/shared/secondary-nav/secondary-nav.component.html
+++ b/frontend/src/app/shared/secondary-nav/secondary-nav.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="search d-flex align-items-center">
     <i class="fa-solid fa-magnifying-glass"></i>
-    <input type="search" placeholder="Quick Search" />
+    <input type="search" placeholder="Quick Search" (input)="onSearch($event)" />
   </div>
   <div></div>
 </nav>
