lawyers (opposite and lawyers) + all it's functionality (add, edit, delete) + add it to sidebar + cases & lawyer phone not unique

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="isLoggedIn$ | async; else loginForm">
+<div>
   <div class="main-wrapper">
     <app-sidebar></app-sidebar>
     <div class="main-content">
