--- a/frontend/src/app/mail-confirmation-page/mail-confirmation-page.component.html
+++ b/frontend/src/app/mail-confirmation-page/mail-confirmation-page.component.html
@@ -10,13 +10,21 @@
     />
   </head>
   <body>
-    @if (isLoading) {
-
-    <h1>Confirming Email</h1>
-    }@else {
+    @if (queryParams.url) {
     <h1>Email Confirmation</h1>
     <p>{{ backendResponse }}</p>
-    <!-- <a href="{{ url('login') }}">Login</a> -->
+    @if (backEndStatusCode === 404) {
+    <p>Please Register Again, To get a new confirmation Link</p>
+    <a>
+      <button type="button" (click)="redirectToRegister()">Register</button>
+    </a>
+    }@else {
+    <a routerLink="" routerLinkActive="router-link-active">Login</a>
+    } }@else {
+    <p>Verification link sent, Please Check your Email</p>
+    <a href="https://mail.google.com/">
+      <button type="button">Gmail</button>
+    </a>
     }
   </body>
 </html>
