enhancing mail configuration in progress

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<div *ngIf="isLoggedIn$ | async; else loginForm">
   <div class="main-wrapper">
     <app-sidebar></app-sidebar>
     <div class="main-content">
