--- a/frontend/src/app/shared/adding-form/adding-form.component.css
+++ b/frontend/src/app/shared/adding-form/adding-form.component.css
@@ -24,7 +24,7 @@
   border-radius: 8px;
   z-index: 1010;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  animation: fadeIn 0.5s ease-in-out forwards;
+  animation: slideIn 0.5s ease-in-out forwards;
 }
 
 .form-box h2 {
@@ -66,7 +66,7 @@ button:hover {
   background: linear-gradient(to right, #4f46e5, #2563eb);
 }
 
-@keyframes fadeIn {
+@keyframes slideIn {
   0% {
     opacity: 0;
     transform: translateY(-150px);
