--- a/frontend/src/app/shared/adding-form/input-row/input-row.component.css
+++ b/frontend/src/app/shared/adding-form/input-row/input-row.component.css
@@ -31,6 +31,13 @@ input[type="date"]:focus {
   outline: none;
   border: 1px solid #3b82f6;
 }
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px #4a5568 inset !important;
+  -webkit-text-fill-color: white !important;
+}
 
 label {
   color: #e2e8f0;
