--- a/frontend/src/app/components/todo-list/tasks/new-task-form/new-task-form.component.html
+++ b/frontend/src/app/components/todo-list/tasks/new-task-form/new-task-form.component.html
@@ -29,7 +29,7 @@
 
     <p class="actions">
       <button type="button" (click)="onCancel()">Cancel</button>
-      <button type="submit" (click)="onConfirm()">Create</button>
+      <button type="button" (click)="onConfirm()" confirm>Create</button>
     </p>
   </form>
 </dialog>
