--- a/frontend/src/app/components/todo-list/tasks/task/task.component.html
+++ b/frontend/src/app/components/todo-list/tasks/task/task.component.html
@@ -1,8 +1,8 @@
 <app-card>
   <article>
     <h2>{{ task.title }}</h2>
-    <time>{{ task.dueDate | date : "fullDate" }}</time>
-    <p>{{ task.summary }}</p>
+    <time>{{ task.due_date | date : "fullDate" }}</time>
+    <p>{{ task.description }}</p>
     <div class="actions">
       <button (click)="onCompleteTask()">Complete</button>
     </div>
