--- a/frontend/src/app/components/todo-list/todo-list.component.html
+++ b/frontend/src/app/components/todo-list/todo-list.component.html
@@ -1,3 +1,6 @@
+<div class="container ms-5 ps-5">
+  <h1 class="ms-5">Lawyers Team Todo List</h1>
+</div>
 <main>
   <ul id="users">
     @for (user of usersArray; track $index) {
@@ -13,6 +16,6 @@
   @if (selectedUser) {
   <app-tasks [selectedUser]="selectedUser" />
   }@else {
-  <p>Select a user to see their tasks</p>
+  <h3 class="mt-2 ms-5 ps-5">Select a user to see their tasks</h3>
   }
 </main>
