--- a/frontend/src/app/shared/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/sidebar/sidebar.component.html
@@ -1,23 +1,38 @@
 <div class="d-flex mainSide" [class.sidebar-open]="isSidebarOpen">
-  <div class="sidebar d-flex flex-column flex-shrink-0 text-white bg-transparent" [class.active]="isSidebarOpen">
-    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 p-3 me-md-auto text-decoration-none"
-      style="color: var(--mainTextColor)">
+  <div
+    class="sidebar d-flex flex-column flex-shrink-0 text-white bg-transparent"
+    [class.active]="isSidebarOpen"
+  >
+    <a
+      href="/"
+      class="d-flex align-items-center mb-3 mb-md-0 p-3 me-md-auto text-decoration-none"
+      style="color: var(--mainTextColor)"
+    >
       <span class="fs-4">Sidebar</span>
     </a>
     <hr style="color: var(--mainTextColor)" />
     <ul class="nav nav-pills flex-column mb-auto">
-      <li class="nav-list" routerLink="dashboard" routerLinkActive="activated" (click)="closeAllDropdowns()">
+      <li
+        class="nav-list"
+        routerLink="dashboard"
+        routerLinkActive="activated"
+        (click)="closeAllDropdowns()"
+      >
         <a class="nav-link">
           <i class="fa-solid fa-table-cells"></i>
           Dashboard
         </a>
       </li>
-      <li (click)="clientsToggle()" class="d-flex justify-content-between nav-list"
-        [ngClass]="{ activated: clientsDropDown }">
+      <li
+        (click)="clientsToggle()"
+        class="d-flex justify-content-between nav-list"
+        [ngClass]="{ activated: clientsDropDown }"
+      >
         <div>
           <a class="nav-link">
             <i class="fa-solid fa-users"></i>
-            Clients</a>
+            Clients</a
+          >
         </div>
         <div class="arrowDown p-2">
           @if (clientsDropDown) {
@@ -28,14 +43,21 @@
       </li>
       @if (clientsDropDown) {
       <app-dropdown passedRoute="clients" listName="Clients Lists" />
-      <app-dropdown passedRoute="client-categories" listName="Client Category" />
+      <app-dropdown
+        passedRoute="client-categories"
+        listName="Client Category"
+      />
       }
-      <li (click)="casesToggle()" [ngClass]="{ activated: casesDropDown }"
-        class="d-flex justify-content-between nav-list">
+      <li
+        (click)="casesToggle()"
+        [ngClass]="{ activated: casesDropDown }"
+        class="d-flex justify-content-between nav-list"
+      >
         <div>
           <a class="nav-link">
             <i class="fa-solid fa-suitcase"></i>
-            Cases</a>
+            Cases</a
+          >
         </div>
         <div class="arrowDown p-2">
           @if (casesDropDown) {
@@ -76,12 +98,21 @@
       <li (click)="closeAllDropdowns()">
         <a class="nav-link" routerLink="courts" routerLinkActive="activated">
           <i class="fa-solid fa-building-columns"></i>
-          Court</a>
+          Court</a
+        >
       </li>
       <li (click)="closeAllDropdowns()">
         <a class="nav-link" routerLink="calender" routerLinkActive="activated">
           <i class="fa-solid fa-calendar-days"></i>
-          Events Calender</a>
+          Events Calender</a
+        >
+      </li>
+      <li (click)="closeAllDropdowns()">
+        <a class="nav-link" routerLink="todo-list" routerLinkActive="activated">
+          <i class="fa-solid fa-tasks"></i>
+
+          Todo List</a
+        >
       </li>
       <li (click)="logOut()">
         <button class="nav-link">
@@ -91,16 +122,22 @@
       </li>
     </ul>
     @if (isSidebarOpen) {
-    <button class="btn btn-danger close-sidebar d-md-none" (click)="toggleSidebar()"
-      style="position: fixed; top: 10px; left: 230px; z-index: 1001">
+    <button
+      class="btn btn-danger close-sidebar d-md-none"
+      (click)="toggleSidebar()"
+      style="position: fixed; top: 10px; left: 230px; z-index: 1001"
+    >
       <i class="fa fa-times"></i>
     </button>
     }
   </div>
 
   @if (!isSidebarOpen) {
-  <button class="btn btn-primary toggle-sidebar d-md-none" (click)="toggleSidebar()"
-    style="position: fixed; top: 10px; left: 10px; z-index: 1001">
+  <button
+    class="btn btn-primary toggle-sidebar d-md-none"
+    (click)="toggleSidebar()"
+    style="position: fixed; top: 10px; left: 10px; z-index: 1001"
+  >
     <i class="fa fa-bars"></i>
   </button>
   }
