--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -1,1 +1,38 @@
-<p>register worklss</p>
+<div class="page-container">
+    <div class="left-half">
+        <img src="../../../assets/registrationFrom/Colored Hor.png" alt="Logo" class="logo" />
+        <h2>Sign Up</h2>
+        <form (ngSubmit)="onRegisterHandler()">
+            <div class="form-group">
+                <label for="firstName">First Name</label>
+                <input type="text" id="firstName" [(ngModel)]="enteredFirstName" name="firstName" required />
+            </div>
+
+            <div class="form-group">
+                <label for="lastName">Last Name</label>
+                <input type="text" id="lastName" [(ngModel)]="enteredLastName" name="lastName" required />
+            </div>
+
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" [(ngModel)]="enteredEmail" name="email" required />
+            </div>
+
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" [(ngModel)]="enteredPassword" name="password" required />
+            </div>
+
+            <div class="form-group">
+                <label for="confirmPassword">Confirm Password</label>
+                <input type="password" id="confirmPassword" [(ngModel)]="enteredConfirmPassword" name="confirmPassword"
+                    required />
+            </div>
+
+            <button type="submit" class="register-btn">Sign Up</button>
+        </form>
+    </div>
+    <div class="right-half">
+        <img src="../../../assets/registrationFrom/lawyerMain.jpeg" alt="Sign Up Image" />
+    </div>
+</div>
