--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -28,11 +28,10 @@
                 <input type="password" id="confirmPassword" [(ngModel)]="enteredConfirmPassword" name="confirmPassword"
                     required />
             </div>
-
             <button type="submit" class="register-btn">Sign Up</button>
         </form>
     </div>
     <div class="right-half">
-        <img src="../../../assets/registrationFrom/lawyerMain.jpeg" alt="Sign Up Image" />
+        <img src="../../../assets/pexels-sora-shimazaki-5668802.jpg" alt="Sign Up Image" />
     </div>
 </div>
