connecting calendar with database + adjusting events table in backend

--- a/frontend/src/app/components/event-calendar/event-calendar.component.html
+++ b/frontend/src/app/components/event-calendar/event-calendar.component.html
@@ -52,6 +52,16 @@
             />
           </div>
           <div class="mb-3">
+            <label for="description" class="form-label">Description</label>
+            <input
+              type="text"
+              class="form-control"
+              id="description"
+              name="description"
+              ngModel
+            />
+          </div>
+          <div class="mb-3">
             <label for="event-color" class="form-label">Event Color</label>
             <input
               type="color"
