--- a/frontend/src/app/shared/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/sidebar/sidebar.component.html
@@ -84,8 +84,8 @@
         </div>
         <div class="arrowDown p-2">
           @if (lawyersDropDown) {
-          <i class="fa-solid fa-chevron-down"></i>
-          } @else {<i class="fa-solid fa-chevron-up"></i> }
+          <i class="fa-solid fa-chevron-up"></i>
+          } @else {<i class="fa-solid fa-chevron-down"></i> }
         </div>
       </li>
       @if (lawyersDropDown) {
