adding UI and functionality for Incomes tracker -> waiting APIS

--- a/frontend/src/app/components/Finance/expenses-tracker/expenses-tracker.component.html
+++ b/frontend/src/app/components/Finance/expenses-tracker/expenses-tracker.component.html
@@ -1,4 +1,6 @@
 <div class="home-container px-10 flex flex-col gap-x-8 gap-y-8">
+  <h1 class="fs-1 fw-bold">EXPENCES TRACKER</h1>
+
   <div class="input-container flex w-full gap-x-8 mt-6">
     <!-- Budget Form -->
     <app-form-wrapper [formGroup]="budgetForm" class="w-1/2">
