--- a/frontend/src/app/components/Finance/table/table.component.html
+++ b/frontend/src/app/components/Finance/table/table.component.html
@@ -12,7 +12,7 @@
       @for (item of data; track $index) {
       <tr class="row-data amber-opacity">
         <td class="table-data">{{ item.name }}</td>
-        <td class="table-data">{{ item.amount }}</td>
+        <td class="table-data">{{ item.amount }} EGP</td>
         <td class="table-data">{{ item.date }}</td>
         <td class="table-data">
           <div
