--- a/frontend/src/app/components/Finance/budget-card/budget-card.component.html
+++ b/frontend/src/app/components/Finance/budget-card/budget-card.component.html
@@ -6,7 +6,7 @@
   <div class="progress-text gap-4 flex w-full justify-between items-center">
     <p class="text-2xl {{ textColor }} font-bold">{{ config.name }}</p>
     <p class="text-2xl {{ textColor }}">
-      {{ config.budget | currency : "EGP " }} Budgeted
+      {{ config.budget | currency : "EGP " }} Expected
     </p>
   </div>
 
