--- a/frontend/src/app/components/courts/courts.component.html
+++ b/frontend/src/app/components/courts/courts.component.html
@@ -1,24 +1,12 @@
 <div class="">
-  <app-secondary-nav
-    tableTitle="Courts"
-    addNewButton="New Court"
-    (btnClicked)="toggleFormVisibility()"
-  />
+  <app-secondary-nav tableTitle="Courts" addNewButton="New Court" (btnClicked)="toggleFormVisibility()"
+    (search)="handleSearch($event)" />
 
-  <app-adding-form
-    *ngIf="isFormVisible"
-    [formType]="formType"
-    [formHeader]="formHeader"
-    [formInputRows]="newCourtInputRows"
-    [onFormSubmit]="submitForm"
-    (backdropClicked)="toggleFormVisibility()"
-  ></app-adding-form>
+  <app-adding-form *ngIf="isFormVisible" [formType]="formType" [formHeader]="formHeader"
+    [formInputRows]="newCourtInputRows" [onFormSubmit]="submitForm"
+    (backdropClicked)="toggleFormVisibility()"></app-adding-form>
 
-  <app-table
-    firstColumnHeader="Court Name"
-    secondColumnHeader="Address"
-    thirdColumnHeader="Action"
-  >
+  <app-table firstColumnHeader="Court Name" secondColumnHeader="Address" thirdColumnHeader="Action">
     @for (court of courts; track $index) {
     <tr>
       <td class="text-center">{{ $index + 1 }}</td>
@@ -26,19 +14,12 @@
       <td>{{ court.location }}</td>
       <td>
         <div class="custom-select">
-          <select
-            name="SELECT"
-            id=""
-            (change)="onActionSelect($event, court.id!)"
-          >
+          <select name="SELECT" id="" (change)="onActionSelect($event, court.id!)">
             <option value="">SELECT</option>
             <option value="Update">Update</option>
             <option value="Delete">Delete</option>
           </select>
-          <i
-            class="fa-solid fa-arrow-down"
-            style="color: var(--mainTextColor)"
-          ></i>
+          <i class="fa-solid fa-arrow-down" style="color: var(--mainTextColor)"></i>
         </div>
       </td>
     </tr>
