--- a/frontend/src/app/components/lawyers/opposite-lawyers/opposite-lawyers.component.html
+++ b/frontend/src/app/components/lawyers/opposite-lawyers/opposite-lawyers.component.html
@@ -1,24 +1,12 @@
 <div class="">
-  <app-secondary-nav
-    tableTitle="Opposite Lawyers"
-    addNewButton="New Lawyer"
-    (btnClicked)="toggleFormVisibility()"
-  />
+  <app-secondary-nav tableTitle="Opposite Lawyers" addNewButton="New Lawyer" (btnClicked)="toggleFormVisibility()"
+    (search)="handleSearch($event)" />
 
-  <app-adding-form
-    *ngIf="isFormVisible"
-    [formType]="formType"
-    [formHeader]="formHeader"
-    [formInputRows]="newLawyerInputRows"
-    [onFormSubmit]="submitForm"
-    (backdropClicked)="toggleFormVisibility()"
-  ></app-adding-form>
+  <app-adding-form *ngIf="isFormVisible" [formType]="formType" [formHeader]="formHeader"
+    [formInputRows]="newLawyerInputRows" [onFormSubmit]="submitForm" (backdropClicked)="toggleFormVisibility()"
+    (inputChanged)="checkChangedInput($event)"></app-adding-form>
 
-  <app-table
-    firstColumnHeader="Lawyer"
-    secondColumnHeader="Mobile Number"
-    thirdColumnHeader="Address"
-  >
+  <app-table firstColumnHeader="Lawyer" secondColumnHeader="Mobile Number" thirdColumnHeader="Address">
     <th scope="col" ngProjectAs="fourthColumnHeader">National ID</th>
     <th scope="col" ngProjectAs="fifthColumnHeader">Action</th>
     @for (lawyer of lawyers; track $index) {
@@ -30,19 +18,12 @@
       <td>{{ lawyer.national_id }}</td>
       <td>
         <div class="custom-select">
-          <select
-            name="SELECT"
-            id=""
-            (change)="onActionSelect($event, lawyer.id!)"
-          >
+          <select name="SELECT" id="" (change)="onActionSelect($event, lawyer.id!)">
             <option value="">SELECT</option>
             <option value="Update">Update</option>
             <option value="Delete">Delete</option>
           </select>
-          <i
-            class="fa-solid fa-arrow-down"
-            style="color: var(--mainTextColor)"
-          ></i>
+          <i class="fa-solid fa-arrow-down" style="color: var(--mainTextColor)"></i>
         </div>
       </td>
       <td *ngIf="loading">Deleting...</td>
