fixing minor UI conflicts && login routing to the dashboard

--- a/frontend/src/app/components/Finance/budget-card/budget-card.component.html
+++ b/frontend/src/app/components/Finance/budget-card/budget-card.component.html
@@ -1,7 +1,7 @@
 @if(config && config.color && borderColor && textColor){
 <div
   class="flex flex-col gap-4 border-2 border-solid {{ borderColor }}
-    py-4 px-5 rounded-[25px] bg-white"
+    py-4 px-5 rounded-4 bg-white"
 >
   <div class="progress-text gap-4 flex w-full justify-between items-center">
     <p class="text-2xl {{ textColor }} font-bold">{{ config.name }}</p>
