--- a/frontend/src/app/components/Finance/table/table.component.scss
+++ b/frontend/src/app/components/Finance/table/table.component.scss
@@ -1,3 +1,4 @@
+@import "../global.css";
 .table-data {
   @apply w-1/5 text-center p-2 text-[15px] h-[52px] text-customHsl-text
     border-2 border-solid border-white;
