--- a/frontend/src/app/components/Finance/table/table.component.html
+++ b/frontend/src/app/components/Finance/table/table.component.html
@@ -13,7 +13,7 @@
       <tr class="row-data amber-opacity">
         <td class="table-data">{{ item.name }}</td>
         <td class="table-data">{{ item.amount }} EGP</td>
-        <td class="table-data">{{ item.date }}</td>
+        <td class="table-data">{{ item.date | date : "medium" }}</td>
         <td class="table-data">
           <div
             class="btn w-fit {{
